--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     debugImplementation rootProject.ext.testDeps["debug-db"]
     implementation project(':multiple-status-view')
     implementation project(':verticaltablayout')
+    implementation project(':loadsir')
 
     implementation 'org.java-websocket:Java-WebSocket:1.3.0'
 }
