--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':multiple-status-view', ':verticaltablayout'
+include ':app', ':multiple-status-view', ':verticaltablayout', ':loadsir'
